--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-typescript": "7.12.16",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@types/jest": "^26.0.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
     "babel-preset-solid": "^0.24.2",
     "coveralls": "^3.1.0",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "pretty-format": "^26.6.2",
+    "rimraf": "^3.0.2",
     "solid-js": "^0.24.7",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.0",
     "typescript": "^4.1.5"
   },
   "peerDependencies": {
