Adding a build ts-config to be able to lint __tests__ files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,5 @@
     "outDir": "./dist",
     "module": "esnext"
   },
-  "include": ["./src/index.ts"],
-  "exclude": ["node_modules/", "./src/__tests__"]
+  "include": ["src"],
 }
