--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "clean": "rimraf dist",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "test": "jest tests",
     "test:watch": "npm test --watch",
     "test:coverage": "npm test -- --coverage",
