--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "7.13.0",
     "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^26.0.20",
     "babel-jest": "^27.0.0",
     "babel-preset-solid": "^1.0.0",
