--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "solid-testing-library",
   "version": "0.2.1",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "license": "MIT",
   "author": "Ryan Carniato",
   "homepage": "https://github.com/solidjs/solid-testing-library#readme",
@@ -15,7 +22,7 @@
     "url": "https://github.com/solidjs/solid-testing-library/issues"
   },
   "engines": {
-    "node": ">= 12"
+    "node": ">= 14"
   },
   "keywords": [
     "testing",
@@ -35,7 +42,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "clean": "rimraf dist",
-    "build": "tsc --project tsconfig.build.json",
+    "build": "tsc --project tsconfig.build.json; tsc --project tsconfig.build.esm.json; node ./manage-dist.js",
     "test": "jest tests",
     "test:watch": "npm test --watch",
     "test:coverage": "npm test -- --coverage",
@@ -47,25 +54,25 @@
     "@testing-library/dom": "^7.29.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "7.13.0",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "7.16.7",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^26.0.20",
-    "babel-jest": "^27.0.0",
-    "babel-preset-solid": "^1.0.0",
-    "coveralls": "^3.1.0",
-    "jest": "^27.0.0",
-    "prettier": "^2.2.1",
-    "pretty-format": "^26.6.2",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
+    "babel-preset-solid": "^1.3.6",
+    "coveralls": "^3.1.1",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "pretty-format": "^27.5.1",
     "rimraf": "^3.0.2",
     "solid-jest": "^0.2.0",
-    "solid-js": "^1.0.0",
-    "typescript": "^4.2.4"
+    "solid-js": "^1.3.8",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "solid-js": "^1.0.0"
+    "solid-js": ">=1.0.0"
   }
 }
