--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "solid-testing-library",
   "version": "0.3.0",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
+  "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+	"exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     }
   },
   "license": "MIT",
@@ -41,13 +43,12 @@
   ],
   "scripts": {
     "prepublishOnly": "npm run build",
-    "clean": "rimraf dist",
-    "build": "tsc --project tsconfig.build.json; tsc --project tsconfig.build.esm.json; node ./manage-dist.js",
+    "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "test": "jest tests",
     "test:watch": "npm test --watch",
     "test:coverage": "npm test -- --coverage",
     "setup": "npm install && npm run validate",
-    "validate": "npm run test:coverage && npm run clean && npm run build",
+    "validate": "npm run test:coverage && npm run build",
     "report:coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
@@ -67,9 +68,9 @@
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "pretty-format": "^27.5.1",
-    "rimraf": "^3.0.2",
     "solid-jest": "^0.2.0",
     "solid-js": "^1.3.8",
+    "tsup": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
