--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "target": "esnext",
-    "newLine": "LF",
-    "moduleResolution": "node",
-    "strict": true,
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
-    "outDir": "./dist",
-    "module": "commonjs"
-  },
+  "$schema": "https://json.schemastore.org/tsconfig",
   "include": ["src"],
+  "compilerOptions": {
+    "lib": ["es2020", "dom"],
+    "module": "commonjs",
+    "target": "es2020",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+	"jsx": "preserve",
+    "jsxImportSource": "solid-js",
+    "outDir": "./dist"
+  }  
 }
