--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-testing-library",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -51,26 +51,27 @@
     "report:coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
-    "@testing-library/dom": "^7.29.4"
+    "@testing-library/dom": "^8.19.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "7.16.7",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "babel-jest": "^27.5.1",
-    "babel-preset-solid": "^1.3.6",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.1",
+    "babel-jest": "^29.2.2",
+    "babel-preset-solid": "^1.6.1",
     "coveralls": "^3.1.1",
-    "jest": "^27.5.1",
-    "prettier": "^2.5.1",
-    "pretty-format": "^27.5.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "prettier": "^2.7.1",
+    "pretty-format": "^29.2.1",
     "rimraf": "^3.0.2",
     "solid-jest": "^0.2.0",
-    "solid-js": "^1.3.8",
-    "typescript": "^4.5.5"
+    "solid-js": "^1.6.1",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "solid-js": ">=1.0.0"
