--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "solid-testing-library",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
-  "main": "./dist/index.cjs",
+  "type": "module",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   },
   "license": "MIT",
@@ -41,37 +42,30 @@
   ],
   "scripts": {
     "prepublishOnly": "npm run build",
-    "clean": "rimraf dist",
-    "build": "tsc --project tsconfig.build.json; tsc --project tsconfig.build.esm.json; node ./manage-dist.js",
-    "test": "jest tests",
+    "build": "tsup src/index.ts --format esm,cjs --dts --clean",
+    "test": "vitest",
     "test:watch": "npm test --watch",
     "test:coverage": "npm test -- --coverage",
     "setup": "npm install && npm run validate",
-    "validate": "npm run test:coverage && npm run clean && npm run build",
+    "validate": "npm run test:coverage && npm run build",
     "report:coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
     "@testing-library/dom": "^8.19.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.1",
-    "babel-jest": "^29.2.2",
-    "babel-preset-solid": "^1.6.1",
     "coveralls": "^3.1.1",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
+    "jsdom": "^20.0.2",
     "prettier": "^2.7.1",
     "pretty-format": "^29.2.1",
-    "rimraf": "^3.0.2",
-    "solid-jest": "^0.2.0",
     "solid-js": "^1.6.1",
-    "typescript": "^4.8.4"
+    "tsup": "6.4.0",
+    "typescript": "^4.8.4",
+    "vite-plugin-solid": "^2.4.0",
+    "vitest": "^0.24.5",
+    "@vitest/coverage-c8": "^0.24.5"
   },
   "peerDependencies": {
     "solid-js": ">=1.0.0"
