--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.5.0",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
+    "import": "./dist/index.js",
+    "require": "./dist/index.cjs"
   },
   "license": "MIT",
   "author": "Ryan Carniato",
