--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid-testing-library",
+  "name": "@solidjs/testing-library",
   "version": "0.5.0",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
   "type": "module",
@@ -25,6 +25,9 @@
   },
   "engines": {
     "node": ">= 14"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "testing",
