--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solidjs/testing-library",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -63,14 +63,14 @@
     "@solidjs/router": "^0.8.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@vitest/coverage-c8": "^0.32.2",
+    "@vitest/coverage-v8": "^0.32.2",
     "coveralls": "^3.1.1",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "pretty-format": "^29.5.0",
-    "solid-js": "^1.7.6",
-    "tsup": "7.0.0",
-    "typescript": "^5.1.3",
+    "solid-js": "^1.7.7",
+    "tsup": "7.1.0",
+    "typescript": "^5.1.6",
     "vite-plugin-solid": "^2.7.0",
     "vitest": "^0.32.2"
   },
@@ -79,6 +79,8 @@
     "solid-js": ">=1.0.0"
   },
   "peerDependencyMeta": {
-    "@solidjs/router": { "optional": true }
+    "@solidjs/router": {
+      "optional": true
+    }
   }
 }
