--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solidjs/testing-library",
-  "version": "0.8.7",
+  "version": "0.8.9",
   "description": "Simple and complete Solid testing utilities that encourage good testing practices.",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -53,26 +53,24 @@
     "test:coverage": "npm test -- --coverage",
     "setup": "npm install && npm run validate",
     "prettier": "prettier -w src/**/* ./*.json ./vitest.config.js",
-    "validate": "npm run typecheck && npm run test:coverage && npm run build",
-    "report:coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "validate": "npm run typecheck && npm run test:coverage && npm run build"
   },
   "dependencies": {
-    "@testing-library/dom": "^9.3.4"
+    "@testing-library/dom": "^10.3.2"
   },
   "devDependencies": {
-    "@solidjs/router": "^0.13.1",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@solidjs/router": "^0.14.1",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
-    "@vitest/coverage-v8": "^1.4.0",
-    "coveralls": "^3.1.1",
-    "jsdom": "^24.0.0",
-    "prettier": "^3.2.5",
+    "@vitest/coverage-v8": "^2.0.4",
+    "jsdom": "^24.1.1",
+    "prettier": "^3.3.3",
     "pretty-format": "^29.7.0",
-    "solid-js": "^1.8.16",
-    "tsup": "8.0.2",
-    "typescript": "^5.4.3",
+    "solid-js": "^1.8.18",
+    "tsup": "8.2.2",
+    "typescript": "^5.5.3",
     "vite-plugin-solid": "^2.10.2",
-    "vitest": "^1.4.0"
+    "vitest": "^2.0.4"
   },
   "peerDependencies": {
     "@solidjs/router": ">=0.9.0",
